@@ -1,3 +1,9 @@
+Tue Sep 26 15:36:20 1995    <tytso@rsts-11.mit.edu>
+
+	* kdb.h, kdb_dbm.h: Add #if !defined(_MSDOS) &&
+		!defined(_MACINTOSH) to prevent these #includes from being
+		used by Mac and PC machines.
+
 Mon Sep 25 16:39:36 1995  Theodore Y. Ts'o  <tytso@dcl>
 
 	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
